--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -19,6 +19,34 @@
         app:layout_constraintTop_toBottomOf="@+id/LLrotulo"
         tools:ignore="UseCompoundDrawables">
 
+        <LinearLayout
+            android:id="@+id/LLavatar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="30dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/txt_avatar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="30dp"
+                android:letterSpacing="0.1"
+                android:text="@string/txt_avatar"
+                android:textColor="@color/gray_blue"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <Spinner
+                android:id="@+id/sppinner_avatar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:entries="@array/array_avatar"
+                tools:ignore="TouchTargetSizeCheck" />
+        </LinearLayout>
+
         <TextView
             android:id="@+id/txt_nome_cad"
             android:layout_width="wrap_content"
