--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,7 @@
                 android:background="@color/blue_gray"
                 android:contentDescription="@string/imgbtn_home"
                 android:scaleType="fitXY"
+                android:src="@drawable/btn_home_c"
                 tools:ignore="TouchTargetSizeCheck" />
 
             <ImageButton
@@ -142,6 +143,8 @@
                             android:id="@+id/txt_bem_vindo"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginTop="10dp"
                             android:layout_marginBottom="15dp"
                             android:text="@string/txt_bem_vindo"
                             android:textColor="@color/gray_blue"
@@ -152,6 +155,7 @@
                             android:id="@+id/txt_desc_app"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
                             android:letterSpacing="0.1"
                             android:lineSpacingExtra="3dp"
                             android:text="@string/txt_descapp"
@@ -164,7 +168,7 @@
                         android:layout_height="113dp"
                         android:layout_margin="10dp"
                         android:contentDescription="@string/img_pet"
-                        app:srcCompat="@drawable/img_borda" />
+                        app:srcCompat="@drawable/img_bem_vindo" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -254,7 +258,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="20dp"
-                    android:entries="@array/array_tipo" />
+                    android:background="@drawable/nav_bar"
+                    android:entries="@array/array_tipo"
+                    android:popupBackground="@color/light_green" />
 
             </LinearLayout>
 
@@ -315,7 +321,9 @@
                             android:layout_width="80dp"
                             android:layout_height="80dp"
                             android:layout_marginEnd="20dp"
-                            android:contentDescription="@string/img_mais" />
+                            android:contentDescription="@string/img_mais"
+                            android:scaleType="fitCenter"
+                            app:srcCompat="@drawable/img_mais" />
                     </LinearLayout>
                 </HorizontalScrollView>
 
