--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -42,7 +42,8 @@
                     android:layout_height="180dp"
                     android:layout_gravity="center"
                     android:contentDescription="@string/img_pet"
-                    android:foregroundGravity="center" />
+                    android:foregroundGravity="center"
+                    android:scaleType="fitXY" />
 
                 <TextView
                     android:id="@+id/txt_nome_usu"
@@ -107,6 +108,7 @@
                     android:textColor="@color/brown"
                     android:textSize="24sp"
                     android:textStyle="bold"
+                    android:visibility="invisible"
                     tools:ignore="TextSizeCheck" />
 
                 <TextView
@@ -119,7 +121,8 @@
                     android:text="@string/nome_dados"
                     android:textColor="@color/gray_blue"
                     android:textSize="16sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:visibility="invisible" />
 
                 <TextView
                     android:id="@+id/txt_sobrenome"
@@ -132,7 +135,8 @@
                     android:text="@string/sobrenome_dados"
                     android:textColor="@color/gray_blue"
                     android:textSize="16sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:visibility="invisible" />
 
                 <TextView
                     android:id="@+id/txt_id_dados"
@@ -145,7 +149,8 @@
                     android:text="@string/id_dados"
                     android:textColor="@color/gray_blue"
                     android:textSize="16sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:visibility="invisible" />
 
                 <TextView
                     android:id="@+id/txt_email"
@@ -158,7 +163,8 @@
                     android:text="@string/email"
                     android:textColor="@color/gray_blue"
                     android:textSize="16sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:visibility="invisible" />
 
                 <TextView
                     android:id="@+id/txt_telefone"
@@ -172,7 +178,8 @@
                     android:text="@string/telefone"
                     android:textColor="@color/gray_blue"
                     android:textSize="16sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:visibility="invisible" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
@@ -198,7 +205,8 @@
             android:layout_height="250dp"
             android:layout_gravity="center"
             android:contentDescription="@string/img_pet"
-            android:foregroundGravity="center" />
+            android:foregroundGravity="center"
+            app:srcCompat="@drawable/img_cadastro" />
 
         <TextView
             android:id="@+id/txt_familia"
@@ -249,7 +257,10 @@
                 android:id="@+id/imgbtn_home"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
+                android:background="@color/blue_gray"
                 android:contentDescription="@string/imgbtn_home"
+                android:scaleType="fitXY"
+                android:src="@drawable/btn_home_b"
                 tools:ignore="TouchTargetSizeCheck" />
 
             <ImageButton
@@ -258,14 +269,20 @@
                 android:layout_height="45dp"
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
+                android:background="@color/blue_gray"
                 android:contentDescription="@string/imgbtn_video"
+                android:scaleType="fitXY"
+                android:src="@drawable/icon_video_b"
                 tools:ignore="TouchTargetSizeCheck" />
 
             <ImageButton
                 android:id="@+id/imgbtn_perfil"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
+                android:background="@color/blue_gray"
                 android:contentDescription="@string/imgbtn_perfil"
+                android:scaleType="fitXY"
+                android:src="@drawable/btn_perfil_c"
                 tools:ignore="TouchTargetSizeCheck" />
 
         </LinearLayout>
