--- a/app/src/main/res/layout/activity_primeiros_socorros.xml
+++ b/app/src/main/res/layout/activity_primeiros_socorros.xml
@@ -32,9 +32,11 @@
                 android:id="@+id/imgbtn_home"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
+                android:backgroundTint="@color/blue_gray"
                 android:contentDescription="@string/imgbtn_home"
+                android:scaleType="fitXY"
                 tools:ignore="TouchTargetSizeCheck"
-                tools:srcCompat="@tools:sample/avatars" />
+                tools:srcCompat="@drawable/btn_home_c" />
 
             <ImageButton
                 android:id="@+id/imgbtn_video"
@@ -42,6 +44,7 @@
                 android:layout_height="45dp"
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
+                android:backgroundTint="@color/blue_gray"
                 android:contentDescription="@string/imgbtn_video"
                 android:scaleType="fitXY"
                 android:src="@drawable/icon_video_b"
@@ -51,6 +54,7 @@
                 android:id="@+id/imgbtn_perfil"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
+                android:backgroundTint="@color/blue_gray"
                 android:contentDescription="@string/imgbtn_perfil"
                 android:scaleType="fitXY"
                 android:src="@drawable/icon_perfil_b"
@@ -274,7 +278,8 @@
                     <ImageView
                         android:id="@+id/img_tel"
                         android:layout_width="50dp"
-                        android:layout_height="50dp"/>
+                        android:layout_height="50dp"
+                        app:srcCompat="@drawable/img_samu_a" />
 
                     <TextView
                         android:id="@+id/txt_samu"
@@ -301,7 +306,8 @@
                     <ImageView
                         android:id="@+id/img_localizacao"
                         android:layout_width="50dp"
-                        android:layout_height="50dp"/>
+                        android:layout_height="50dp"
+                        app:srcCompat="@drawable/img_hospital_a" />
 
                     <TextView
                         android:id="@+id/_localizacao"
