--- a/app/src/main/res/layout/activity_tutoriais.xml
+++ b/app/src/main/res/layout/activity_tutoriais.xml
@@ -181,7 +181,8 @@
                             android:layout_width="100dp"
                             android:layout_height="80dp"
                             android:layout_marginStart="20dp"
-                            android:contentDescription="@string/img_video" />
+                            android:contentDescription="@string/img_video"
+                            app:srcCompat="@drawable/video1_tutoriais_" />
 
                         <TextView
                             android:id="@+id/txt_video"
@@ -219,7 +220,8 @@
                             android:layout_width="100dp"
                             android:layout_height="80dp"
                             android:layout_marginStart="20dp"
-                            android:contentDescription="@string/img_video" />
+                            android:contentDescription="@string/img_video"
+                            app:srcCompat="@drawable/video2_tutoriais_" />
 
                         <TextView
                             android:id="@+id/txt_video2"
@@ -257,7 +259,8 @@
                             android:layout_width="100dp"
                             android:layout_height="80dp"
                             android:layout_marginStart="20dp"
-                            android:contentDescription="@string/img_video" />
+                            android:contentDescription="@string/img_video"
+                            app:srcCompat="@drawable/video3_tutoriais_" />
 
                         <TextView
                             android:id="@+id/txt_video3"
@@ -311,7 +314,10 @@
                 android:id="@+id/imgbtn_home"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
+                android:backgroundTint="@color/blue_gray"
                 android:contentDescription="@string/imgbtn_home"
+                android:scaleType="fitXY"
+                android:src="@drawable/btn_home_c"
                 tools:ignore="TouchTargetSizeCheck" />
 
             <ImageButton
@@ -320,6 +326,7 @@
                 android:layout_height="45dp"
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
+                android:backgroundTint="@color/blue_gray"
                 android:contentDescription="@string/imgbtn_video"
                 android:scaleType="fitXY"
                 android:src="@drawable/icon_video_b"
@@ -329,6 +336,7 @@
                 android:id="@+id/imgbtn_perfil"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
+                android:backgroundTint="@color/blue_gray"
                 android:contentDescription="@string/imgbtn_perfil"
                 android:scaleType="fitXY"
                 android:src="@drawable/icon_perfil_b"
