--- a/app/src/main/res/layout/activity_primeiros_socorros.xml
+++ b/app/src/main/res/layout/activity_primeiros_socorros.xml
@@ -32,11 +32,11 @@
                 android:id="@+id/imgbtn_home"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
-                android:backgroundTint="@color/blue_gray"
+                android:background="@color/blue_gray"
                 android:contentDescription="@string/imgbtn_home"
                 android:scaleType="fitXY"
-                tools:ignore="TouchTargetSizeCheck"
-                tools:srcCompat="@drawable/btn_home_c" />
+                android:src="@drawable/btn_home_b"
+                tools:ignore="TouchTargetSizeCheck" />
 
             <ImageButton
                 android:id="@+id/imgbtn_video"
@@ -44,7 +44,7 @@
                 android:layout_height="45dp"
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
-                android:backgroundTint="@color/blue_gray"
+                android:background="@color/blue_gray"
                 android:contentDescription="@string/imgbtn_video"
                 android:scaleType="fitXY"
                 android:src="@drawable/icon_video_b"
@@ -54,7 +54,7 @@
                 android:id="@+id/imgbtn_perfil"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
-                android:backgroundTint="@color/blue_gray"
+                android:background="@color/blue_gray"
                 android:contentDescription="@string/imgbtn_perfil"
                 android:scaleType="fitXY"
                 android:src="@drawable/icon_perfil_b"
@@ -70,7 +70,6 @@
         android:background="@drawable/fundo_r_tulo"
         android:gravity="center"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/SCRbase"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -80,7 +79,9 @@
             android:id="@+id/txt_rotulo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/comic_neue_bold"
             android:text="@string/rotulo_socorro"
+            android:textColor="@color/white"
             android:textSize="20sp" />
     </LinearLayout>
 
@@ -119,52 +120,67 @@
 
                     <com.google.android.material.chip.Chip
                         android:id="@+id/chip_papelao"
-                        style="@style/Widget.Material3.Chip.Filter.Elevated"
+                        style="@style/Widget.MaterialComponents.Chip.Choice"
                         android:layout_width="90dp"
                         android:layout_height="40dp"
                         android:backgroundTintMode="screen"
+                        android:gravity="center"
                         android:text="@string/scr_txt_engasgo"
+                        android:textAlignment="center"
                         android:textColor="@color/light_green"
+                        app:checkedIconVisible="false"
                         app:chipBackgroundColor="@color/gray_blue"
                         tools:ignore="TouchTargetSizeCheck" />
 
                     <com.google.android.material.chip.Chip
                         android:id="@+id/chip_tecido"
-                        style="@style/Widget.Material3.Chip.Filter.Elevated"
+                        style="@style/Widget.MaterialComponents.Chip.Choice"
                         android:layout_width="110dp"
                         android:layout_height="40dp"
+                        android:gravity="center"
                         android:text="@string/scr_txt_queima"
+                        android:textAlignment="center"
                         android:textColor="@color/light_green"
+                        app:checkedIconVisible="false"
                         app:chipBackgroundColor="@color/gray_blue"
                         tools:ignore="TouchTargetSizeCheck" />
 
                     <com.google.android.material.chip.Chip
                         android:id="@+id/chip_papel"
-                        style="@style/Widget.Material3.Chip.Filter.Elevated"
+                        style="@style/Widget.MaterialComponents.Chip.Choice"
                         android:layout_width="80dp"
                         android:layout_height="40dp"
+                        android:gravity="center"
                         android:text="@string/scr_txt_frat"
+                        android:textAlignment="center"
                         android:textColor="@color/light_green"
+                        app:checkedIconVisible="false"
                         app:chipBackgroundColor="@color/gray_blue"
                         tools:ignore="TouchTargetSizeCheck" />
 
                     <com.google.android.material.chip.Chip
                         android:id="@+id/chip_plastico"
-                        style="@style/Widget.Material3.Chip.Filter.Elevated"
+                        style="@style/Widget.MaterialComponents.Chip.Choice"
                         android:layout_width="110dp"
                         android:layout_height="40dp"
+                        android:gravity="center"
                         android:text="@string/scr_txt_into"
+                        android:textAlignment="center"
                         android:textColor="@color/light_green"
+                        app:checkedIconVisible="false"
                         app:chipBackgroundColor="@color/gray_blue"
                         tools:ignore="TouchTargetSizeCheck" />
 
                     <com.google.android.material.chip.Chip
                         android:id="@+id/chip_corte"
-                        style="@style/Widget.Material3.Chip.Filter.Elevated"
+                        style="@style/Widget.MaterialComponents.Chip.Choice"
                         android:layout_width="70dp"
                         android:layout_height="40dp"
+                        android:gravity="center"
                         android:text="@string/scr_txt_corte"
+                        android:textAlignment="center"
                         android:textColor="@color/light_green"
+                        app:checkedIconVisible="false"
                         app:chipBackgroundColor="@color/gray_blue"
                         tools:ignore="TouchTargetSizeCheck" />
                 </com.google.android.material.chip.ChipGroup>
