--- a/app/src/main/res/layout/activity_cuidados.xml
+++ b/app/src/main/res/layout/activity_cuidados.xml
@@ -17,7 +17,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/SCRbase"
         tools:ignore="VisualLintBounds">
 
         <LinearLayout
@@ -36,8 +35,8 @@
                 android:background="@color/blue_gray"
                 android:contentDescription="@string/imgbtn_home"
                 android:scaleType="fitXY"
-                tools:ignore="TouchTargetSizeCheck"
-                tools:srcCompat="@drawable/btn_home_b" />
+                android:src="@drawable/btn_home_b"
+                tools:ignore="TouchTargetSizeCheck" />
 
             <ImageButton
                 android:id="@+id/imgbtn_video"
@@ -71,7 +70,6 @@
         android:background="@drawable/fundo_r_tulo"
         android:gravity="center"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/SCRbase"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -81,20 +79,21 @@
             android:id="@+id/txt_rotulo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/tipo_animal"
+            android:fontFamily="@font/comic_neue_bold"
+            android:text="@string/txt_cuidado"
+            android:textColor="@color/white"
             android:textSize="20sp" />
     </LinearLayout>
 
     <ScrollView
         android:id="@+id/SCRbase"
         android:layout_width="397dp"
-        android:layout_height="687dp"
+        android:layout_height="690dp"
         android:contentDescription="@string/Base"
         app:layout_constraintBottom_toTopOf="@+id/LLnavbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LLrotulo">
+        app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
             android:id="@+id/LLbase"
