--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -304,7 +304,9 @@
             android:id="@+id/txt_rotulo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/comic_neue_bold"
             android:text="@string/rotulo_perfil"
+            android:textColor="@color/white"
             android:textSize="20sp" />
     </LinearLayout>
 
