--- a/app/src/main/res/layout/activity_tipos.xml
+++ b/app/src/main/res/layout/activity_tipos.xml
@@ -80,7 +80,9 @@
             android:id="@+id/txt_rotulo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/comic_neue_bold"
             android:text="@string/rotulo_tipos"
+            android:textColor="@color/white"
             android:textSize="20sp" />
     </LinearLayout>
 
