--- a/app/src/main/res/layout/activity_tutoriais.xml
+++ b/app/src/main/res/layout/activity_tutoriais.xml
@@ -23,7 +23,9 @@
             android:id="@+id/txt_rotulo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/comic_neue_bold"
             android:text="@string/rotulo_video"
+            android:textColor="@color/white"
             android:textSize="20sp" />
     </LinearLayout>
 
@@ -66,34 +68,50 @@
 
                 <com.google.android.material.chip.Chip
                     android:id="@+id/chip_papelao"
-                    style="@style/Widget.Material3.Chip.Filter.Elevated"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
                     android:layout_width="90dp"
                     android:layout_height="40dp"
+                    android:fontFamily="sans-serif-black"
                     android:text="@string/categoria_papelao"
+                    android:textAlignment="center"
+                    android:textColor="@color/brown"
+                    app:chipBackgroundColor="@color/light_green"
                     tools:ignore="TouchTargetSizeCheck" />
 
                 <com.google.android.material.chip.Chip
                     android:id="@+id/chip_tecido"
-                    style="@style/Widget.Material3.Chip.Filter.Elevated"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
                     android:layout_width="80dp"
                     android:layout_height="40dp"
+                    android:fontFamily="sans-serif-black"
                     android:text="@string/categoria_tecido"
+                    android:textAlignment="center"
+                    android:textColor="@color/brown"
+                    app:chipBackgroundColor="@color/light_green"
                     tools:ignore="TouchTargetSizeCheck" />
 
                 <com.google.android.material.chip.Chip
                     android:id="@+id/chip_papel"
-                    style="@style/Widget.Material3.Chip.Filter.Elevated"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
                     android:layout_width="70dp"
                     android:layout_height="40dp"
+                    android:fontFamily="sans-serif-black"
                     android:text="@string/categoria_papel"
+                    android:textAlignment="center"
+                    android:textColor="@color/brown"
+                    app:chipBackgroundColor="@color/light_green"
                     tools:ignore="TouchTargetSizeCheck" />
 
                 <com.google.android.material.chip.Chip
                     android:id="@+id/chip_plastico"
-                    style="@style/Widget.Material3.Chip.Filter.Elevated"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
                     android:layout_width="90dp"
                     android:layout_height="40dp"
+                    android:fontFamily="sans-serif-black"
                     android:text="@string/categoria_plastico"
+                    android:textAlignment="center"
+                    android:textColor="@color/brown"
+                    app:chipBackgroundColor="@color/light_green"
                     tools:ignore="TouchTargetSizeCheck" />
 
             </com.google.android.material.chip.ChipGroup>
@@ -141,15 +159,16 @@
                         android:layout_width="match_parent"
                         android:layout_height="120dp"
                         android:layout_marginTop="20dp"
+                        android:background="@drawable/borda_redonda_a"
                         android:gravity="center_vertical"
                         android:orientation="horizontal"
                         tools:ignore="UseCompoundDrawables">
 
                         <ImageView
                             android:id="@+id/img_video1"
-                            android:layout_width="100dp"
-                            android:layout_height="80dp"
-                            android:layout_marginStart="20dp"
+                            android:layout_width="130dp"
+                            android:layout_height="110dp"
+                            android:layout_marginStart="10dp"
                             android:contentDescription="@string/img_video"
                             app:srcCompat="@drawable/video1_tutoriais_" />
 
@@ -158,7 +177,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="25dp"
-                            android:layout_marginBottom="25dp"
+                            android:layout_marginBottom="20dp"
                             android:letterSpacing="0.1"
                             android:text="@string/titulo_video"
                             android:textColor="@color/gray_blue"
@@ -169,7 +188,7 @@
                             android:id="@+id/txt_categoria"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="-30dp"
+                            android:layout_marginStart="-60dp"
                             android:layout_marginTop="35dp"
                             android:text="@string/titulo_categoria" />
 
@@ -180,15 +199,16 @@
                         android:layout_width="match_parent"
                         android:layout_height="120dp"
                         android:layout_marginTop="30dp"
+                        android:background="@drawable/borda_redonda_a"
                         android:gravity="center_vertical"
                         android:orientation="horizontal"
                         tools:ignore="UseCompoundDrawables">
 
                         <ImageView
                             android:id="@+id/img_video2"
-                            android:layout_width="100dp"
-                            android:layout_height="80dp"
-                            android:layout_marginStart="20dp"
+                            android:layout_width="130dp"
+                            android:layout_height="110dp"
+                            android:layout_marginStart="10dp"
                             android:contentDescription="@string/img_video"
                             app:srcCompat="@drawable/video2_tutoriais_" />
 
@@ -197,7 +217,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="25dp"
-                            android:layout_marginBottom="25dp"
+                            android:layout_marginBottom="20dp"
                             android:letterSpacing="0.1"
                             android:text="@string/titulo_video"
                             android:textColor="@color/gray_blue"
@@ -208,7 +228,7 @@
                             android:id="@+id/txt_categorias2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="-30dp"
+                            android:layout_marginStart="-60dp"
                             android:layout_marginTop="35dp"
                             android:text="@string/titulo_categoria" />
 
@@ -219,15 +239,16 @@
                         android:layout_width="match_parent"
                         android:layout_height="120dp"
                         android:layout_marginTop="30dp"
+                        android:background="@drawable/borda_redonda_a"
                         android:gravity="center_vertical"
                         android:orientation="horizontal"
                         tools:ignore="UseCompoundDrawables">
 
                         <ImageView
                             android:id="@+id/img_video3"
-                            android:layout_width="100dp"
-                            android:layout_height="80dp"
-                            android:layout_marginStart="20dp"
+                            android:layout_width="130dp"
+                            android:layout_height="110dp"
+                            android:layout_marginStart="10dp"
                             android:contentDescription="@string/img_video"
                             app:srcCompat="@drawable/video3_tutoriais_" />
 
@@ -247,7 +268,7 @@
                             android:id="@+id/txt_categoria3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="-30dp"
+                            android:layout_marginStart="-60dp"
                             android:layout_marginTop="35dp"
                             android:text="@string/titulo_categoria" />
 
@@ -283,10 +304,10 @@
                 android:id="@+id/imgbtn_home"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
-                android:backgroundTint="@color/blue_gray"
+                android:background="@color/blue_gray"
                 android:contentDescription="@string/imgbtn_home"
                 android:scaleType="fitXY"
-                android:src="@drawable/btn_home_c"
+                android:src="@drawable/btn_home_b"
                 tools:ignore="TouchTargetSizeCheck" />
 
             <ImageButton
@@ -295,17 +316,17 @@
                 android:layout_height="45dp"
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
-                android:backgroundTint="@color/blue_gray"
+                android:background="@color/blue_gray"
                 android:contentDescription="@string/imgbtn_video"
                 android:scaleType="fitXY"
-                android:src="@drawable/icon_video_b"
+                android:src="@drawable/icon_video_c"
                 tools:ignore="TouchTargetSizeCheck" />
 
             <ImageButton
                 android:id="@+id/imgbtn_perfil"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
-                android:backgroundTint="@color/blue_gray"
+                android:background="@color/blue_gray"
                 android:contentDescription="@string/imgbtn_perfil"
                 android:scaleType="fitXY"
                 android:src="@drawable/icon_perfil_b"
